- Added +=, -=, *=, /=, AND=, OR=, XOR= assignment operators to BASIC
- Added BIN$ and HEX$ builtin functions to BASIC
- Added standard Spin2 functions WRPIN, WXPIN, WYPIN, RDPIN, etc. to Spin and BASIC.
- Added [] pointer dereference operator for FreeBasic compatibility.
- Added exponentiation operator ^ to BASIC
- Allowed multiple assignment and functions which return multiple values in BASIC
- Implemented _ for skipping assignments in multiple assignments
- Implemented a few more peephole optimizations for P2
- Made sure all of the results in a multi-result function are initialized to 0 for Spin
- Improved the optimizer's dead register detection
- Implemented automatic clkfreq setting based on _clkfreq
- Start Spin file compilation in CON mode
- Fixed a type promotion problem with bitwise operators in C
- Fixed a problem with calculating sizes of arrays referenced as "foo.bar"
- Fixed comments at end-of-line in Spin

Version 4.0.6
- Allow "static" and "const" or "volatile" to come in any order in C code
- Fixed a problem with detection of "static" functions (ones without member variable references) which use coginit on non-static functions.
- Updated definition of P2 getct instruction to allow wc
- Various small changes to builtin functions for spin2cpp
- Relax warnings for use of constants in range $1c0-$1ef as registers
- Made sure arrays are converted to pointers in all cases for passing parameters in C

Version 4.0.5
- Fixed static function declarations in C so that declarations in different files do not conflict
- Fixed enum declaration scope in C
- Made optimizer take care not to create djnz with large offsets
- Added a warning in PASM for some uses of integers without '#'.
- Added some missing propeller2.h functions
- Fixed a problem parsing Spin comment blocks containing newlines after an empty REPEAT statement
- Made instructions be automatically aligned in ORG mode (not ORGH mode)
- Made -x flag disable LF->CR+LF translation on serial port